# dynamical-systems-lectures

./: README.md  pyproject.toml
helpers/: helpers.py
notebooks/: 1_dynamical_system.ipynb  2_high_dimensional_lds.ipynb  3_rSLDS.ipynb  helpers.py
